# spot-teleop

./: .gitignore  .gitmodules  Dockerfile.spot-ros2  Dockerfile.zed  README.md  docker-compose.yaml  ngc-cli.md5
isaac-sim_ws/: alavpivot.mtl  alavpivot.usd  alavpivot_m.usd  anim.usd  grasp.usd  hand.usd  lever.usdc  lever_blue.mtl  lever_blue.usd  spot_grasp.yaml  spot_grasp_1.yaml  spot_with_arm.usd  valvula.usd  zed_streamer_warehouse.usd
spot-ros2_ws/src/spot_moveit_config/: CMakeLists.txt  package.xml
spot-ros2_ws/src/spot_moveit_config/config/: README_SERVO.md  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_planners.yaml  pose_tracking_settings.yaml  ros2_controllers.yaml  spot.ros2_control.xacro  spot.srdf  spot.urdf  spot.xrdf  spot_arm.urdf  spot_servo_config.yaml
spot-ros2_ws/src/spot_moveit_config/launch/: spot_moveit_all.launch.py  spot_pose_tracking.launch.py
spot-ros2_ws/src/spot_moveit_config/scripts/: continuos_to_spot.py  spot_pose_tracker.py
spot-ros2_ws/src/spot_moveit_config/src/: servo_pose_tracking_spot.cpp
spot-ros2_ws/src/spot_operation/spot_operation/: __init__.py  isaac_publisher.py
spot-ros2_ws/src/spot_operation_ros2/: GRASP_VALVE_README.md  package.xml  setup.py
spot-ros2_ws/src/spot_operation_ros2/launch/: valve_grasp.launch.py
spot-ros2_ws/src/spot_operation_ros2/models/: requirements.txt
spot-ros2_ws/src/spot_operation_ros2/spot_operation_ros2/: GRASP_VALVE_README.md  detect_valve.py  grasp_valve.py  gripper_controller.py  interactive_pose_marker.py  isaac_publisher.py  (+3 more)
zed_ws/isaac_ros_assets/urdf/: ur10e.urdf
(+4 files in other folders)
